# journaled

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKER_README.md  Dockerfile  README.md  README_3.md  README_4.md  README_5.md  README_IMPORT_OFX.md  README_RECONCILE.md  alembic.ini  alembic_1.ini  copilot.md  docker-compose.yml  pyproject.toml  pyproject_3.toml  pyproject_4.toml  pyproject_6.toml  pytest.ini  pytest_run.txt  run_tests.py  test_log.txt  test_run.txt
alembic/: env.py  env_1.py  env_3.py  script.py.mako  script.py_3.mako
alembic/versions/: 11937d304c9f_initial_migration.py  20250905_0001_initial.py  20250905_0001_initial_1.py  20250905_0001_initial_4.py  20250908_0002_add_checks_and_reversals.py  20250908_0002_add_checks_and_reversals_1.py  20e65af87a9f_initial.py  464df4eeb301_add_is_active_to_accounts.py  60c64480afb0_initial_migration.py  6aaec91a921f_add_parent_id_to_accounts.py  746cead63c11_initial.py  87327f00b253_add_timestamps_to_transactions_and_.py  b000a57c759e_create_transactions_and_splits_.py  bd510c4dd1c4_create_transactions_and_splits_.py  c482798bb3c7_add_checks_memo_line.py  d5cf2219b26c_initial.py  daae4466b2cb_add_transaction_reference.py  e1c1f69b6c12_add_parties_and_transaction_party_id.py  e437b98e9389_add_parent_id_to_accounts.py  ead2deec8344_add_user_table_for_authentication.py
src/journaled_app/: api.py  app.py  auth.py  cli.py  db.py  models.py  reconcile-cleanup.diff  schemas.py  seeds.py
src/journaled_app/api/: __init__.py  deps.py  routes_accounts.py  routes_auth.py  routes_transactions.py
src/journaled_app/services/: checks.py  import_ofx.py  posting.py  reconcile.py  reversal.py
src/ledger_app/: api.py  api_1.py  cli.py  cli_1.py  cli_2.py  cli_3.py  cli_4.py  cli_6.py  cli_7.py  db.py  db_5.py  models.py  models_2.py  models_4.py  models_5.py  schemas.py  seeds_4.py
src/ledger_app/services/: checks.py  import_csv.py  import_ofx.py  posting.py  posting_1.py  posting_4.py  posting_6.py  reversal.py
tests/: conftest.py  conftest_1.py  conftest_2.py  test_api.py  test_auth.py  test_cli_init_db.py  test_cli_integration.py  test_cli_smoke.py  test_db_schema_compatibility.py  test_import_csv.py  test_import_ofx.py  test_import_ofx_same_line.py  test_migrations_and_seed.py  test_migrations_and_seed_1.py  test_posting.py  test_posting_1.py  test_reversal.py  test_splits_constraints.py  test_splits_constraints_1.py  test_void_check.py
