
[project]
name = "ledger"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy>=2.0",
  "psycopg[binary]",
  "pydantic>=2",
  "alembic",
  "python-dateutil",
  "reportlab",
  "weasyprint",
  "loguru",
  "jinja2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "black",
  "types-python-dateutil",
  "pre-commit",
]

[project.scripts]
ledger-dev = "ledger_app.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --cov=ledger_app --cov-report=xml --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E","F","I","UP","B"]
lint.ignore = ["E501"]
src = ["src"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
