
[project]
name = "journaled"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy>=2.0",
  "psycopg[binary]",
  "pydantic>=2",
  "alembic",
  "python-dateutil",
  "reportlab",
  "weasyprint",
  "loguru",
  "jinja2",
  "black>=25.1.0",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "black",
  "types-python-dateutil",
  "pre-commit",
]


[tool.hatch.build.targets.wheel]
packages = ["src/journaled_app"]

[tool.hatch.build.targets.sdist]
include = ["pyproject.toml", "src/**", "README.md", "LICENSE"]

# If your CLI uses Typer/Click/argparse with a main() function:
[project.scripts]
journaled = "journaled_app.cli:main"   # or "journaled_app.cli:app" for Typer

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --cov=journaled_app --cov-report=xml --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E","F","I","UP","B"]
lint.ignore = ["E501"]
src = ["src"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"

[dependency-groups]
dev = [
  "journaled",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
journaled = { workspace = true }

[build-system]
requires = ["hatchling"]         # or pdm-backend, setuptools, etc.
build-backend = "hatchling.build"
